--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-<h1>Products</h1>
-
-<h5>Getting data from Declarative pattern</h5>
-
-@if (products$ | async; as products) {
-{{ products | json }}
-} @else {
-  <p>loading products ....</p>
-}
+<nav>
+  <a
+    class="button"
+    routerLink="/test"
+    routerLinkActive="activeButton"
+    ariaCurrentWhenActive="page"
+    >Test App</a
+  >
+  |
+  <a
+    class="button"
+    routerLink="/todo"
+    routerLinkActive="activeButton"
+    ariaCurrentWhenActive="page"
+    >Todo App</a
+  >
+</nav>
+<router-outlet></router-outlet>
