Todo component with rxjs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     ariaCurrentWhenActive="page"
     >Test App</a
   >
-  |
+  <p class="inline-block !ml-4 !mr-4">|</p>
   <a
     class="button"
     routerLink="/todo"
@@ -15,4 +15,5 @@
     >Todo App</a
   >
 </nav>
+<hr>
 <router-outlet></router-outlet>
