--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -10,13 +10,12 @@
             <mat-option [value]="user.name">{{ user.name }}</mat-option>
           </ng-container>
         </mat-select>
-      </mat-form-field> 
+      </mat-form-field>
       <!-- {{vm.currentUser | json}} -->
     </div>
     <div class="w-1/2">
-      <mat-checkbox class="example-margin"
-        [disabled]="!vm.currentUser || vm.isLoading"
-        (change)="filterTodos($event)">Filter incomplete todos</mat-checkbox
+      <mat-checkbox class="example-margin" [disabled]="!vm.currentUser || vm.isLoading" (change)="filterTodos($event)"
+        >Filter incomplete todos</mat-checkbox
       >
     </div>
   </div>
@@ -29,28 +28,19 @@
     <p>{{ user.university }}</p>
   </div>
   <div class="inline-block w-full">
-    @if (vm.isFiltered) {
-        @if (user.filteredTodos; as todos) {
-            <mat-selection-list #list [disableRipple]="true">
-                @for (todo of todos; track todo) {
-                <mat-list-option [selected]="true">{{
-                todo.todo
-                }}</mat-list-option>
-                }
-            </mat-selection-list>
-        }
-    } @else {
-        @if (user.todos; as todos) {
-            <mat-selection-list #list [disableRipple]="true" (click)="onToggle(vm.currentUser, list)">
-                @for (todo of todos; track todo) {
-                <mat-list-option [value]="todo" [selected]="todo.completed">{{
-                todo.todo
-                }}</mat-list-option>
-                }
-            </mat-selection-list>
-        }
-    }
-    
+    @if (vm.isFiltered) { @if (user.filteredTodos; as todos) {
+    <mat-selection-list #list [disableRipple]="true">
+      @for (todo of todos; track todo) {
+      <mat-list-option [selected]="true">{{ todo.todo }}</mat-list-option>
+      }
+    </mat-selection-list>
+    } } @else { @if (user.todos; as todos) {
+    <mat-selection-list #list [disableRipple]="true" (click)="onToggle(vm.currentUser, list)">
+      @for (todo of todos; track todo) {
+      <mat-list-option [value]="todo" [selected]="todo.completed">{{ todo.todo }}</mat-list-option>
+      }
+    </mat-selection-list>
+    } }
   </div>
   } } }
 </div>
