Copy replace todo component for initial todo-signal setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,12 @@
 <nav>
-  <a
-    class="button"
-    routerLink="/test"
-    routerLinkActive="activeButton"
-    ariaCurrentWhenActive="page"
-    >Test App</a
-  >
+  <a class="button" routerLink="/test" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Test App</a>
   <p class="inline-block !ml-4 !mr-4">|</p>
-  <a
-    class="button"
-    routerLink="/todo"
-    routerLinkActive="activeButton"
-    ariaCurrentWhenActive="page"
-    >Todo App</a
+  <a class="button" routerLink="/todo" routerLinkActive="activeButton" ariaCurrentWhenActive="page">To-do App</a>
+  <p class="inline-block !ml-4 !mr-4">|</p>
+  <a class="button" routerLink="/todo-signals" routerLinkActive="activeButton" ariaCurrentWhenActive="page"
+    >To-do Signals</a
   >
 </nav>
-<hr>
+<hr />
 <router-outlet></router-outlet>
+
