--- a/src/app/todo-signals/todo-signals.component.html
+++ b/src/app/todo-signals/todo-signals.component.html
@@ -1,46 +1,33 @@
 <div class="container p-4">
-  @if (viewModel | async; as vm) {
   <div class="flex">
     <div class="w-1/2">
-      <mat-form-field class="w-full">
-        <mat-label>Choose a user</mat-label>
-        <!-- Problem with setting mat-select value: revisit logic -->
-        <mat-select [(value)]="vm.currentUser" (selectionChange)="onUserSelection($event)">
-          <ng-container *ngFor="let user of vm.users">
-            <mat-option [value]="user.name">{{ user.name }}</mat-option>
-          </ng-container>
-        </mat-select>
-      </mat-form-field>
-      <!-- {{vm.currentUser | json}} -->
+      <!-- Select for user dropdown -->
+      <ng-container *ngIf="users$ | async as users">
+        <mat-form-field class="w-full">
+          <mat-label>Choose a user</mat-label>
+          <mat-select (selectionChange)="onUserSelection($event)">
+            <ng-container *ngFor="let user of users">
+              <mat-option [value]="user.id">{{ user.name }}</mat-option>
+            </ng-container>
+          </mat-select>
+        </mat-form-field>
+      </ng-container>
     </div>
     <div class="w-1/2">
-      <mat-checkbox class="example-margin" [disabled]="!vm.currentUser || vm.isLoading" (change)="filterTodos($event)"
-        >Filter incomplete todos</mat-checkbox
+      <mat-checkbox [(ngModel)]="filterList" [disabled]="todos().length === 0" (change)="filterTodos($event)"
+        >Filter complete to-do items</mat-checkbox
       >
     </div>
   </div>
-
-  @if (vm.isLoading) {
-  <p>Loading current user ...</p>
-  } @else { @if (vm.currentUser; as user) {
-  <div class="flex">
-    <p class="!mr-4">{{ user.name }}</p>
-    <p>{{ user.university }}</p>
+  <div class="container pointer-events-none">
+    <ng-container *ngFor="let todo of todos(); index as i">
+      <div class="flex">
+        <mat-checkbox [(ngModel)]="todo.completed" class="example-margin">{{ todo.title }}</mat-checkbox>
+      </div>
+    </ng-container>
   </div>
-  <div class="inline-block w-full">
-    @if (vm.isFiltered) { @if (user.filteredTodos; as todos) {
-    <mat-selection-list #list [disableRipple]="true">
-      @for (todo of todos; track todo) {
-      <mat-list-option [selected]="true">{{ todo.todo }}</mat-list-option>
-      }
-    </mat-selection-list>
-    } } @else { @if (user.todos; as todos) {
-    <mat-selection-list #list [disableRipple]="true" (click)="onToggle(vm.currentUser, list)">
-      @for (todo of todos; track todo) {
-      <mat-list-option [value]="todo" [selected]="todo.completed">{{ todo.todo }}</mat-list-option>
-      }
-    </mat-selection-list>
-    } }
-  </div>
-  } } }
+  <ng-container *ngIf="isLoading()">
+    <p>Loading to-dos ...</p>
+  </ng-container>
 </div>
+
