User search with shareReplay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
   <a class="button" routerLink="/todo-signals" routerLinkActive="activeButton" ariaCurrentWhenActive="page"
     >To-do Signals</a
   >
+  <p class="inline-block !ml-4 !mr-4">|</p>
+  <a class="button" routerLink="/user-search" routerLinkActive="activeButton" ariaCurrentWhenActive="page"
+    >User Search</a
+  >
 </nav>
 <hr />
 <router-outlet></router-outlet>
