Tour of heroes CRUD rxjs exercise

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
   <a class="button" routerLink="/user-search" routerLinkActive="activeButton" ariaCurrentWhenActive="page"
     >User Search</a
   >
+  <p class="inline-block !ml-4 !mr-4">|</p>
+  <a class="button" routerLink="/toh" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Tour of Heroes</a>
 </nav>
 <hr />
 <router-outlet></router-outlet>
