Some component store initial exercises

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
   >
   <p class="inline-block !ml-4 !mr-4">|</p>
   <a class="button" routerLink="/toh" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Tour of Heroes</a>
+  <p class="inline-block !ml-4 !mr-4">|</p>
+  <a class="button" routerLink="/component-store" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Component Store</a>
 </nav>
 <hr />
 <router-outlet></router-outlet>
