--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
   <a class="button" routerLink="/toh" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Tour of Heroes</a>
   <p class="inline-block !ml-4 !mr-4">|</p>
   <a class="button" routerLink="/component-store" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Component Store</a>
+  <p class="inline-block !ml-4 !mr-4">|</p>
+  <a class="button" routerLink="/panels" routerLinkActive="activeButton" ariaCurrentWhenActive="page">Panels</a>
 </nav>
 <hr />
 <router-outlet></router-outlet>
